--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ task fatJar(type: Jar) {
      manifest {
      	      attributes 'Implementation-Title': 'Gradle Jar File Example',
 	      		 'Implementation-Version': version,
-			 'Main-Class': 'relief.cloud.ReliefController'
+			 'Main-Class': 'relief.ReliefLauncher'
+			 //'Main-Class': 'relief.cloud.ReliefController'
      }
      baseName = project.name + '-all'
      from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
