fix sch history update bug

--- a/conf/relief.conf
+++ b/conf/relief.conf
@@ -7,6 +7,7 @@ dkvsHistoryManagerType=DynamoDB
 reliefAddress=127.0.0.1:10080
 
 # The mode of history server (Evaluation purpose)
+# {SCH, NoCRHU, CRHU}
 historyServerMode=CRHU
 
 # This is the primary's address
