fix config file errors

--- a/run/r2/relief.conf
+++ b/run/r2/relief.conf
@@ -3,10 +3,10 @@ dkvsDataManagerType=DynamoDB
 dkvsHistoryManagerType=DynamoDB
 
 # Region and URL of the backend data and history server
-historyManagerRegion="LAN"
-dataManagerRegion="LAN"
-backEndHistoryServerURL="http://localhost:8000"
-backEndDataServerURL="http://localhost:8000"
+historyManagerRegion=LAN
+dataManagerRegion=LAN
+backEndHistoryServerURL=http://localhost:8000
+backEndDataServerURL=http://localhost:8000
 
 # This node's address
 reliefAddress=127.0.0.1:10081
